fixed body overflow ( because of sidebar )

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -178,15 +178,14 @@ NEW MESSAGE POPUP*/
 
 /*----------*/
 
-#body {
+body {
 	background-color: var(--page-bg) !important;
-	float: none;
-	min-height: 100vh;
-	float: none !important;
+
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+	overflow: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -201,10 +200,11 @@ html {
 	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
 	height: calc(var(--vh, 1vh) * 100);
 
-	max-width: 100vw;
-	max-width: calc(var(--vw, 1vw) * 100);
-	max-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-	max-height: calc(var(--vh, 1vh) * 100);
+	/* max-width: 100vw;
+	max-width: var(--vw, 1px);
+	max-height: 100vh; /* Fallback for browsers that do not support Custom Properties *
+	max-height: var(--vh, 1px); 
+	*/
 
 	background: var(--page-bg);
 	float: none !important;
